--- a/05-appendix.Rmd
+++ b/05-appendix.Rmd
@@ -8,6 +8,125 @@ If you feel it necessary to include an appendix, it goes here.
 
 # Supplementary {.unnumbered}
 
+## Neuromasts
+
+### SEM
+
+To check whether the reduction in size and cell count of NMs in shroom3$--$ embryos had an effect on their morphology too, scanning electron microscopy (SEM) samples for each group were imaged.
+
+(ref:suppsem) CC Kinocilia
+
+```{r sumcells, out.width = "0.50\\textwidth", fig.cap="(ref:suppsem)", fig.scap="CC Kinocilia"}
+knitr::include_graphics("figures/supp/sem.png")
+```
+
+### Hair-cells
+
+To check whether the reduction in size and cell count of NMs in shroom3$--$ embryos had an effect on hair cell development, immunostainings on 4 dpf embryos with a hair cell specific marker were performed.
+
+(ref:suppllhc) Lateral Line Haircells
+
+```{r suppllhc, out.width = "0.95\\textwidth", fig.cap="(ref:suppllhc)", fig.scap="Lateral Line Haircells"}
+knitr::include_graphics("figures/supp/ll_hc.png")
+```
+
+## Rosette Formation
+
+### Shroom3 localization
+
+(ref:supploc) Shroom3 localization
+
+```{r supploc, out.width = "0.75\\textwidth", fig.cap="(ref:supploc)", fig.scap="Shroom3 localization"}
+knitr::include_graphics("figures/supp/loc.png")
+```
+
+### Luminal Signaling
+
+(ref:suppzo1) Luminal signaling
+
+```{r suppzo1, out.width = "0.8\\textwidth", fig.cap="(ref:suppzo1)", fig.scap="Luminal signaling"}
+knitr::include_graphics("figures/supp/zo1.png")
+```
+
+## Proliferation
+
+An important regulator for proliferation and organ size is the mechanosensitive hippo signaling pathway where the transcription factors Yap and Taz are the most downstream targets. When dephosphorylated, Yap and Taz translocate from the cytoplasm to the nucleus to induce target gene expression. 
+To check for differences in hippo signaling, immunostainings for Taz were performed. On average the immunostainings suggest that Taz localization is more concentrated in the leading region and in the nuclei of peripherical PLLp cells.
+
+(ref:suppyap) Hippo Signaling in the pLLP. PLLps with nuclei labeled in magenta and Taz in green. Vertical sections show a more basal, a medial and a more apical Z section.
+
+```{r suppyap, out.width = "0.8\\textwidth", fig.cap="(ref:suppyap)", fig.scap="Hippo Signaling in the pLLP"}
+knitr::include_graphics("figures/supp/immunos.png")
+```
+
+## Apical Constriction
+
+## Shroom3 interaction partners
+
+(ref:supplim) LIM domain proteins
+
+```{r supplim, out.width = "0.8\\textwidth", fig.cap="(ref:supplim)", fig.scap="LIM domain proteins"}
+knitr::include_graphics("figures/supp/lim.png")
+```
+
+(ref:supplpp) Lpp-RFP
+
+```{r supplpp, out.width = "0.8\\textwidth", fig.cap="(ref:supplpp)", fig.scap="Lpp-RFP"}
+knitr::include_graphics("figures/supp/lim.png")
+```
+
+## Rescue experiments
+
+(ref:suppsucc) SU5402 CC positions
+
+```{r suppsucc, out.width = "0.8\\textwidth", fig.cap="(ref:suppsucc)", fig.scap="SU5402 CC positions"}
+knitr::include_graphics("figures/results/06_rescues/su54/cc_positions.png")
+```
+
+(ref:supprkoutcc) Rockout CC positions
+
+```{r supprkoutcc, out.width = "0.8\\textwidth", fig.cap="(ref:supprkoutcc)", fig.scap="Rockout CC positions"}
+knitr::include_graphics("figures/results/06_rescues/rockout/cc_positions.png")
+```
+
+(ref:suppcalcc) Calyculin CC positions
+
+```{r suppcalcc, out.width = "0.8\\textwidth", fig.cap="(ref:suppcalcc)", fig.scap="Calyculin CC positions"}
+knitr::include_graphics("figures/results/06_rescues/caliculyn/cc_positions.png")
+```
+
+(ref:supptempcc) Temperature CC positions
+
+```{r supptempcc, out.width = "0.8\\textwidth", fig.cap="(ref:supptempcc)", fig.scap="Temperature CC positions"}
+knitr::include_graphics("figures/results/06_rescues/temp/cc_positions.png")
+```
+
+(ref:supphscc) Heatshock CC positions
+
+```{r supphscc, out.width = "0.8\\textwidth", fig.cap="(ref:supphscc)", fig.scap="Heatshock CC positions"}
+knitr::include_graphics("figures/results/06_rescues/shrm3/cc_positions.png")
+```
+
+## Models
+
+### LL patterning
+
+The CC pattern for both _shrm3_++ and _shroom3_$--$ can be modeled by a phase modulated cosine (figure 1), where the power to x represents the phase and is increased by only 0.1 in _shroom3_$--$ to go from a CC count of 5 to 7 over a span of 20 hours.
+
+(ref:supccpmodel) CC pattern model
+
+```{r supccpmodel, out.width = "0.8\\textwidth", fig.cap="(ref:supccpmodel)", fig.scap="CC pattern model"}
+knitr::include_graphics("figures/supp/cc_model.png")
+```
+
+### Morphogenetic gradients
+
+(ref:supgrad) CC pattern model
+
+```{r supgrad, out.width = "0.8\\textwidth", fig.cap="(ref:supgrad)", fig.scap="CC pattern model"}
+knitr::include_graphics("figures/supp/gradients.png")
+```
+
 # **Statutory Declaration** {.unnumbered}
 
 I herewith declare that I have composed the present thesis myself and without use of any other than the
