--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -13,8 +13,8 @@ _Shroom3_ heterozygous zebrafish show no phenotypic abnormality. When incrossed,
 
 ## Lateral Line
 
-Two additional CCs are deposited in shroom3$--$ embryos (results, figure 1.1) leading to a net increase in cell count of ~9% (31 cells) (results, figure 1.3). However, proliferation is not increased in the pLLP (results, figure 2.2) but in CCs once they are deposited (results, figure 2.3). Therefore, the increase in CC count is unrelated to the amount of proliferation in the pLLP. The cell count and area per CC show an average reduction of 6% respectively and no difference for the density (results, figure 1.3).
-The shroom3$--$ LL phenotype can be mimicked by inhibition of Rock but not rescued by induction of Rock (results, chapter 6.3), leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition, but not sufficient. CC count can also be rescued by ectopic expression of a Shroom3-RFP fusion protein (results, figure 6.1 A). 
+Two additional CCs are deposited in shroom3$--$ embryos (section \@ref(res-ccounts)) leading to a net increase in cell count of ~9$\%$ (31 cells) (section \@ref(res-llmorph)). However, proliferation is not increased in the pLLP (section \@ref(res-prolpllp)) but in CCs once they are deposited (section \@ref(res-prolcc)). Therefore, the increase in CC count is unrelated to the amount of proliferation in the pLLP. The cell count and area per CC show an average reduction of 6$\%$ respectively and no difference for the density (section \@ref(res-llmorph)).
+The shroom3$--$ LL phenotype can be mimicked by inhibition of Rock but not rescued by induction of Rock (section \@ref(res-rockresc)), leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition, but not sufficient. CC count can also be rescued by ectopic expression of a Shroom3-RFP fusion protein (section \@ref(res-shrmresc)), leading to the conclusion that Shroom3 has a spatiotemporal function necessary and sufficient for proper LL development.
 The reduction is supported scanning electron microscopy (SEM) pictures of 3 dpf (supplement, figure 1) NMs, which indicate a disruption bundled kinocilia. However, as hair cells still develop (supplement, figure 2), there is no reason to presume that shroom3$--$ NMs suffered from a loss of function.  
 End of migration analysis shows that the average length of the LL does not differ, suggesting that speed is also not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, figure 3.3).
 
