--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -15,23 +15,23 @@ _Shroom3_ heterozygous zebrafish show no phenotypic abnormality. When incrossed,
 
 Two additional CCs are deposited in shroom3$--$ embryos (section \@ref(res-ccounts)) leading to a net increase in cell count of ~9$\%$ (31 cells) (section \@ref(res-llmorph)). However, proliferation is not increased in the pLLP (section \@ref(res-prolpllp)) but in CCs once they are deposited (section \@ref(res-prolcc)). Therefore, the increase in CC count is unrelated to the amount of proliferation in the pLLP. The cell count and area per CC show an average reduction of 6$\%$ respectively and no difference for the density (section \@ref(res-llmorph)).
 The shroom3$--$ LL phenotype can be mimicked by inhibition of Rock but not rescued by induction of Rock (section \@ref(res-rockresc)), leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition, but not sufficient. CC count can also be rescued by ectopic expression of a Shroom3-RFP fusion protein (section \@ref(res-shrmresc)), leading to the conclusion that Shroom3 has a spatiotemporal function necessary and sufficient for proper LL development.
-The reduction is supported scanning electron microscopy (SEM) pictures of 3 dpf (supplement, figure 1) NMs, which indicate a disruption bundled kinocilia. However, as hair cells still develop (supplement, figure 2), there is no reason to presume that shroom3$--$ NMs suffered from a loss of function.  
-End of migration analysis shows that the average length of the LL does not differ, suggesting that speed is also not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, figure 3.3).
+The reduction is supported scanning electron microscopy (SEM) pictures of 3 dpf (supplement, \@ref(fig:suppsem)) NMs, which indicate a disruption bundled kinocilia. However, as hair cells do still develop (supplement, \@ref(fig:suppllhc)), there is no reason to presume that shroom3$--$ NMs suffered from a loss of function. End of migration analysis also shows that the average length of the LL does not differ, suggesting that speed is not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, \@ref(fig:rdtreg)).
 
 ## Rosettes
 
-Rosette analysis showed that the median count of rosettes is hardly (2 rosettes in _shroom3_$--$ as compared to 3 in _shroom3_++ embryos) and mostly affected within the first 6-8 hours of migration (results, figure 3.4 B and B’). Also, variance is much more affected, such that the error bars extend those of _shroom3_++ in both maximum and minimum. Rosettiness however, the normalized rosette weight, is much more drastically affected (results, figure 3.4 C and C’). While the median rosettiness of _shroom3_++ is at a constant level of about 0.9, _shroom3_$--$ rosettiness starts out at about 0.5 but then linearly grows until it also reaches levels of about 0.9 at 16-20 hours of migration. As for rosette detection, variance is much higher.
+Rosette analysis showed that the median count of rosettes is hardly (2 rosettes in _shroom3_$--$ as compared to 3 in _shroom3_++ embryos) and mostly affected within the first 6-8 hours of migration ((\@ref(fig:rdtdet))B and B’). Also, variance is much more affected, such that the error bars extend those of _shroom3_++ in both maximum and minimum. Rosettiness however, the normalized rosette weight, is much more drastically affected ((\@ref(fig:rdtdet))C and C’). While the median rosettiness of _shroom3_++ is at a constant level of about 0.9, _shroom3_$--$ rosettiness starts out at about 0.5 but then linearly grows until it also reaches levels of about 0.9 at 16-20 hours of migration. As for rosette detection, variance is much higher.
 
-Rosettiness is strongly correlated to the final number of CCs deposited (results, figure 3.5 B) which is also evidenced by rescue of correlation between rosettiness at the beginning of migration and CC count at the end of migration (results, figure 6.1 C), concluding that rosettiness is the key parameter for the future outcome of CC pattern. Still, the question is what determines rosette weight. Although speed and rosettiness are correlated only weakly, they are significantly stronger correlated in _shroom3_$--$ than they are in _shroom3_++ embryos throughout time (results, figure 3.5 A). This finding is also confirmed by an experiment where the CC count of _shroom3_$--$ can be rescued when incubated at lower temperature (results, chapter 6.4). In conclusion these results lead to the conclusion that _shroom3_$--$ rosettes are destabilized with increasing thermodynamics. 
+Rosettiness is strongly correlated to the final number of CCs deposited (\@ref(fig:rdtcorr)B) which is also evidenced by rescue of correlation between rosettiness at the beginning of migration and CC count at the end of migration (\@ref(fig:rescshrm)C), concluding that rosettiness is the key parameter for the future outcome of CC pattern. Still, the question is what determines rosette weight. Although speed and rosettiness are correlated only weakly, they are significantly stronger correlated in _shroom3_$--$ than they are in _shroom3_++ embryos throughout time (\@ref(fig:rdtcorr)A). This finding is also confirmed by an experiment where the CC count of _shroom3_$--$ can be rescued when incubated at lower temperature (section \@ref(res-tempresc)). In conclusion these results lead to the conclusion that _shroom3_$--$ rosettes are destabilized with increasing thermodynamics. 
 
 ## Hair Cells
 
-Deposition of the first CC is more independent of Shroom3 (results, figure 1.3) than the remaining CCs and the mean positions indicate that deposition does not happen more randomly, but at a higher frequency. Interestingly during the first four hours, when the first CC is deposited, analysis of hair-cell specification shows that not only the promotor for atoh1a is more active (results, figure 5.2 A and B) in _shroom3_$--$ embryos, but also that more cells are differentiating to become hair-cells (results, figure 5.2 C and C’). This leads to the conclusion that the morphological changes introduced by the _shroom3_ mutation lead to a pre-mature activation of the _shroom3_ promotor, subsequently leading to deposition of the CC the hair-cell is associated with. In the pLLP, Notch signaling is important for selection and specification of hair-cells (introduction, chapter 1.3). Interestingly, these findings are supported by another study where they have shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 (Kozlovskaja-Gumbrienė et al., 2017). For our observation this could mean that (1) either expression of atoh1a is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been well studied (Shaya et al., 2017). For the latter, the proposed model would be that in each micro-rosette the hair-cell is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of atoh1a and ultimately to CC deposition. 
+Deposition of the first CC is more independent of Shroom3 (\@ref(fig:llpos)) than the remaining CCs and the mean positions indicate that deposition does not happen more randomly, but at a higher frequency. Interestingly during the first four hours, when the first CC is deposited, analysis of hair-cell specification shows that not only the promotor for _atoh1a_ is more active (results, figure 5.2 A and B) in _shroom3_$--$ embryos, but also that more cells are differentiating to become hair-cells (\@ref(fig:hctl)C and C’). This leads to the conclusion that the morphological changes introduced by the _shroom3_ mutation lead to a pre-mature activation of the _shroom3_ promotor, subsequently leading to deposition of the CC the hair-cell is associated with. 
+In the pLLP, Notch signaling is important for selection and specification of hair-cells (\@ref(intro-notch)). Interestingly, these findings are supported by another study where they have shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 (Kozlovskaja-Gumbrienė et al., 2017). For our observation this could mean that (1) either expression of atoh1a is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been well studied (Shaya et al., 2017). For the latter, the proposed model would be that in each micro-rosette the hair-cell is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of atoh1a and ultimately to CC deposition. 
 
 ## Apical Constriction
 
-The method developed to quantify AC allows measurement along two orthogonal axes, the major (the longer axis) and a minor (the shorter axis), of an ellipse fitted to a cellular cross-section at a distinct distance from the apical site. In addition, the cells orientation in degrees from the horizontal midline is obtained (results, figure 4.2 A-A’). 
-In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe phenotypes. In more detail the results show an increased axial an-isotropy, meaning that AC is more reduced along the major than along the minor axis. In conclusion this means that AC and probably tension is more relaxed along the anterior-posterior axis. In terms of cell shape this means that rosette cells go from a pyramidal geometry , more to a prism geometry  (figure 1). This is also confirmed by angular measurement which shows that for 0-15° more _shroom3_$--$ pLLPs cells are aggregated while at 30-45°, more _shroom3_++ cells are aggregated.
+The method developed to quantify AC allows measurement along two orthogonal axes, the major (the longer axis) and a minor (the shorter axis), of an ellipse fitted to a cellular cross-section at a distinct distance from the apical site. In addition, the cells orientation in degrees from the horizontal midline is obtained (\@ref(fig:acaci)A-A’). 
+In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe phenotype. In more detail the results show an increased axial an-isotropy, meaning that AC is more reduced along the major than along the minor axis. In conclusion this means that AC and probably tension is more relaxed along the anterior-posterior axis. In terms of cell shape this means that rosette cells go from a pyramidal geometry, more to a prism geometry (\@ref(fig:sumcells)). This is also confirmed by angular measurement which shows that for 0-15$^\circ$ more _shroom3_$--$ pLLPs cells are aggregated while at 30-45$^\circ$, more _shroom3_++ cells are aggregated.
 
 (ref:sumcells) Rosette and Cell Shape Model
 
@@ -39,7 +39,7 @@ In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe 
 knitr::include_graphics("figures/summary/cell-model.png")
 ```
 
-Zona occludens-1 (ZO-1) is a peripheral membrane, tight-junction associated protein. Within the apical region of pLLP rosettes Fgf filled luminal structures are developing that that are hubs for locally confined morphogen signaling. All cells of a rosette make up and are connected to a single lumen. When visualizing the lumen via an antibody for ZO-1, the lumen appears like a buckyball where each side is the connection to a single cell (Durdu et al., 2014). While in _shroom3_++ rosettes those structures appear circular in the trailing rosette, in _shroom3_$--$ rosettes they appear more oval (supplementary, figure4), which supports the theory of an-isotropy. Furthermore, in more leading regions the signal is more fragmented, which supports the theory of micro-rosette structures.
+Zona occludens-1 (ZO-1) is a peripheral membrane, tight-junction associated protein. Within the apical region of pLLP rosettes Fgf filled luminal structures are developing that that are hubs for locally confined morphogen signaling. All cells of a rosette make up and are connected to a single lumen. When visualizing the lumen via an antibody for ZO-1, the lumen appears like a buckyball where each side is the connection to a single cell (Durdu et al., 2014). While in _shroom3_++ rosettes those structures appear circular in the trailing rosette, in _shroom3_$--$ rosettes they appear more oval (supplement, (\@ref(fig:suppzo1)), which supports the theory of an-isotropy. Furthermore, in more leading regions the signal is more fragmented, which supports the theory of micro-rosette structures.
 
 ## Model
 
