--- a/template.tex
+++ b/template.tex
@@ -181,7 +181,11 @@ $endif$
 
 $if(lof)$
   \listoffigures
-  {$disclosure$}
+  \vfill
+  \begin{center}
+    \textbf{Disclosure}\\
+    {$disclosure$}
+  \end{center}
 $endif$
 
 $if(abstract)$
